# tmgbc-cancel-list

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tmgbc-cancel-list/: main.py
tmgbc_cancel_list/: element.py  locator.py  main.py  page.py
