[tool.poetry]
name = "tmgbc-cancel-list"
version = "1.0.0"
description = "東京都スポーツ施設サービスで施設のキャンセル待ちをする"
authors = ["Yasuaki Iwata <yasuaki.iwata0101@gmail.com>"]
readme = "README.md"
packages = [{include = "tmgbc_cancel_list"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
